# volcano

./: .gitattributes  .gitignore  .shellcheckrc  .vscode  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Documentation.md  PULL_REQUEST_TEMPLATE.md  README.md  SECURITY.md  build.vol  build_examples  pyproject.toml  setup.py  stdlib.vol  volcano.py
.github/: FUNDING.yml
examples/: cli.vol  hello-world.sh  hello-world.vol
examples/01-hello-world/: hello-world.sh  hello-world.vol
examples/01-volcano-script/: hello-world.sh  hello-world.vol
examples/02-from-python/: main.py
examples/02-python-script/: main.py
examples/03-volcano-executable/: countdown
examples/04-volcano-facts/: volcano-facts.vol
examples/05-volcano-library/: volcano-facts.vol
volcano/: __init__.py  cli.py  compiler.py  glob.py  glob.vsh  ir.py  runtime.vsh  stdlib.vol  vssembly.py  vssembly.vsh
volcano/ast/: shell.py  vssembly.py
volcano/ast/vssembly/: __init__.py
volcano/compiler/: __init__.py  python.py  shell.py  vssembly.py
volcano/compiler/backend/: vssembly.py
volcano/compiler/frontend/: __init__.py  python.py
volcano/syntax/: __init__.py  vssembly.py
volcanolang.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
